--- a/style.css
+++ b/style.css
@@ -1,12 +1,4 @@
-    .parrent{
-        display: flex;
-        justify-content: center;
-        gap: 50px;
-        flex-wrap: wrap;
-        margin-top: 40px;
-    }
 
-    
 * {
   margin: 0;
   padding: 0;
@@ -14,97 +6,176 @@
 }
 
 body {
-  background-color: #000;
+  background-color: #fff;
+  font-family: sans-serif;
+}
+
+/* Container for cards */
+.parrent {
   display: flex;
   justify-content: center;
-  align-items: center;
-  /* min-height: 100vh; */
-  padding: 20px;
+  gap: 30px;
+  flex-wrap: wrap;
+  margin-top: 120px; /* Navbar ke neeche jagah */
 }
 
-.card {
-  position: relative;
-  width: 350px;   
-  height: 400px;  
-  background-color: #000;
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
-  padding: 20px;
-  gap: 16px;
-  border-radius: 12px;
-  cursor: pointer;
-}
+  .card {
+    position: relative;
+    width: 330px;   
+    height: 340px;  
+    background-color: #000;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    padding: 20px;
+    gap: 16px;
+    border-radius: 12px;
+    cursor: pointer;
+  }
 
-/* Gradient Border */
-.card::before {
-  content: '';
-  position: absolute;
-  inset: 0;
-  left: -5px;
-  margin: auto;
-  width: 320px;  
-  height: 410px;  
-  border-radius: 20px;
-  background: linear-gradient(-45deg, #e81cff 0%, #40c9ff 100%);
-  z-index: -10;
-  pointer-events: none;
-  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
 
-.card::after {
-  content: "";
-  z-index: -1;
-  position: absolute;
-  inset: 0;
-  background: linear-gradient(-45deg, #fc00ff 0%, #00dbde 100%);
-  transform: translate3d(0, 0, 0) scale(0.98);
-  filter: blur(30px);   
-}
+  .card::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    left: -5px;
+    margin: auto;
+    width: 270px;  
+    height: 300px;  
+    border-radius: 20px;
+    background: linear-gradient(-45deg, #e81cff 0%, #40c9ff 100%);
+    z-index: -10;
+    pointer-events: none;
+    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
 
-/* Text */
-.name {
-  font-size: 24px;
-  text-transform: capitalize;
-  font-weight: 700;
-  color: #fff;
-  position: relative;
-  bottom: 150px;
-}
-.price{
-     font-size: 24px;
-  text-transform: capitalize;
-  font-weight: 700;
-  color: #fff;
-  position: relative;
-  bottom: 150px;
-}
-.category{
-        font-size: 24px;
-  text-transform: capitalize;
-  font-weight: 700;
-  color: #fff;
-  position: relative;
-  bottom: 150px; 
-}
+  .card::after {
+    content: "";
+    z-index: -1;
+    position: absolute;
+    inset: 0;
+    background: linear-gradient(-45deg, #fc00ff 0%, #00dbde 100%);
+    transform: translate3d(0, 0, 0) scale(0.98);
+    filter: blur(30px);   
+  }
 
-.card p:not(.heading) {
-  font-size: 16px;
-  color: #fff;
-}
 
-.card p:last-child {
-  color: #e81cff;
-  font-weight: 600;
-  position: relative;
-  bottom: 150px;
-  font-size: 1.5rem;
-}
+  .name {
+    font-size: 24px;
+    text-transform: capitalize;
+    font-weight: 700;
+    color: #fff;
+    position: relative;
+    bottom: 90px;
+  }
+  .price{
+      font-size: 24px;
+    text-transform: capitalize;
+    font-weight: 700;
+    color: #fff;
+    position: relative;
+    bottom: 0px;
+  }
+  .category{
+          font-size: 24px;
+    text-transform: capitalize;
+    font-weight: 700;
+    color: #fff;
+    position: relative;
+    bottom: 150px; 
+  }
 
-.card:hover::after {
-  filter: blur(40px);
-}
+  .card p:not(.heading) {
+    font-size: 16px;
+    color: #fff;
+  }
 
-.card:hover::before {
-  transform: rotate(-90deg) scaleX(1.2) scaleY(0.9);
-}
+  .card p:last-child {
+    color: #e81cff;
+    font-weight: 600;
+    position: relative;
+    bottom: 150px;
+    font-size: 1.5rem;
+  }
+
+  .card:hover::after {
+    filter: blur(40px);
+  }
+
+  .card:hover::before {
+    transform: rotate(-90deg) scaleX(1.2) scaleY(0.9);
+  }
+
+
+  button {
+    position: relative;
+    padding: 10px 20px;
+    border-radius: 7px;
+    border: 1px solid rgb(61, 106, 255);
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 2px;
+    background: transparent;
+    color: #fff;
+    overflow: hidden;
+    box-shadow: 0 0 0 0 transparent;
+    -webkit-transition: all 0.2s ease-in;
+    -moz-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
+  }
+
+  button:hover {
+    background: rgb(61, 106, 255);
+    box-shadow: 0 0 30px 5px rgba(0, 142, 236, 0.815);
+    -webkit-transition: all 0.2s ease-out;
+    -moz-transition: all 0.2s ease-out;
+    transition: all 0.2s ease-out;
+  }
+
+  button:hover::before {
+    -webkit-animation: sh02 0.5s 0s linear;
+    -moz-animation: sh02 0.5s 0s linear;
+    animation: sh02 0.5s 0s linear;
+  }
+
+  button::before {
+    content: '';
+    display: block;
+    width: 0px;
+    height: 86%;
+    position: absolute;
+    top: 7%;
+    left: 0%;
+    opacity: 0;
+    background: #fff;
+    box-shadow: 0 0 50px 30px #fff;
+    -webkit-transform: skewX(-20deg);
+    -moz-transform: skewX(-20deg);
+    -ms-transform: skewX(-20deg);
+    -o-transform: skewX(-20deg);
+    transform: skewX(-20deg);
+  }
+
+  @keyframes sh02 {
+    from {
+      opacity: 0;
+      left: 0%;
+    }
+
+    50% {
+      opacity: 1;
+    }
+
+    to {
+      opacity: 0;
+      left: 100%;
+    }
+  }
+
+  button:active {
+    box-shadow: 0 0 0 0 transparent;
+    -webkit-transition: box-shadow 0.2s ease-in;
+    -moz-transition: box-shadow 0.2s ease-in;
+    transition: box-shadow 0.2s ease-in;
+  }
